Update vercel.json with correct production domain

--- a/vercel.json
+++ b/vercel.json
@@ -33,8 +33,8 @@
         "PHP_INI_SCAN_DIR": "api",
         "APP_ENV": "production",
         "APP_DEBUG": "false",
-        "APP_URL": "https://princess-private-pool.vercel.app",
-        "ASSET_URL": "https://princess-private-pool.vercel.app",
+        "APP_URL": "https://princess-private-pool-c6eq8h94h-ardianys-projects.vercel.app",
+        "ASSET_URL": "https://princess-private-pool-c6eq8h94h-ardianys-projects.vercel.app",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
