Add APP_KEY and fix session configuration for Vercel - Enable debug mode temporarily

--- a/vercel.json
+++ b/vercel.json
@@ -32,7 +32,8 @@
     "env": {
         "PHP_INI_SCAN_DIR": "api",
         "APP_ENV": "production",
-        "APP_DEBUG": "false",
+        "APP_DEBUG": "true",
+        "APP_KEY": "base64:0jCuIBzpTCtkFLmeD/N+rRELI1qyK2Vt2s+hz0Me4W0=",
         "APP_URL": "https://princess-private-pool-cg3c3zcx5-ardianys-projects.vercel.app",
         "ASSET_URL": "https://princess-private-pool-cg3c3zcx5-ardianys-projects.vercel.app",
         "APP_CONFIG_CACHE": "/tmp/config.php",
@@ -44,6 +45,7 @@
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
+        "SESSION_LIFETIME": "120",
         "SESSION_SECURE_COOKIE": "true",
         "DB_CONNECTION": "mysql",
         "DB_HOST": "",
