Remove APP_URL and ASSET_URL from vercel.json, set APP_DEBUG to false

--- a/vercel.json
+++ b/vercel.json
@@ -32,10 +32,8 @@
     "env": {
         "PHP_INI_SCAN_DIR": "api",
         "APP_ENV": "production",
-        "APP_DEBUG": "true",
+        "APP_DEBUG": "false",
         "APP_KEY": "base64:0jCuIBzpTCtkFLmeD/N+rRELI1qyK2Vt2s+hz0Me4W0=",
-        "APP_URL": "https://princess-private-pool-3zet9jwib-ardianys-projects.vercel.app",
-        "ASSET_URL": "https://princess-private-pool-3zet9jwib-ardianys-projects.vercel.app",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
